# MIPS_emulator

./: ML_T_F_classification.ipynb
Command Parser/: Makefile  README.md  input-adv
MIPS Assembly to Machine Instruction Translator/: README.md  note  pa1.c
MIPS Assembly to Machine Instruction Translator/testcases/: i-format  r-format  shifts
MIPS Emulator/: README.md  pa2.c
MIPS Emulator with Pipelining/: .gitignore  README.md  main.c  pa3.c
MIPS Emulator with Pipelining/testcases/: program-branch  program-raw
MIPS Emulator/testcases/: basic  load  program-fibonacci
ca-pa0/: input-simple  pa0  pa0.c
ca-pa0/pa0 report/: 사이버보안학과_202126469_홍리나_pa0_REPORT.pages
ca-pa1/: Makefile  README.md  pa1
ca-pa1/pa1 report/: pa1 report.pages
ca-pa2/: Makefile  README.md  testfile.c
ca-pa2/testcases/: program-hidden
ca-pa3/: CMakeLists.txt  Makefile  types.h
ca-pa3/testcases/: program-i  program-mem
